# agent-tree-rl

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-build-ci.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
agent_tree_rl/: __init__.py  api.py  artifacts.py  backup.py  cli.py  config.py  control.py  crypto.py  engine.py  evidence.py  hidden_benchmark.py  learner.py  logging_utils.py  metrics.py  process_registry.py  secrets.py  serde.py  store.py  verify.py
agent_tree_rl/fixtures/: __init__.py  example_benchmark.json  sample_policy.json
agent_tree_rl/workers/: __init__.py  benchmark_worker.py  evidence_probe.py  policy_candidate.py
deploy/: Caddyfile  Dockerfile  agent-tree-rl.service  compose.yaml
docs/: API.md  ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_PLAN.md  PROJECT_PLAN.md  README.md  RELEASE.md  RUNBOOK.md  TECHNICAL_DESIGN.md  THREAT_MODEL.md  USAGE_GUIDE.md
examples/: benchmark_candidate.py  synthetic_terminal.py
scripts/: check_build_lock.py  check_deployment_pins.py  check_public_release.py  verify_release.sh
tests/: test_backup.py  test_control_api.py  test_core.py  test_crypto_store.py  test_evidence_benchmark.py  test_evidence_probe.py  test_lifecycle_recovery.py  test_public_release_scanner.py  test_secure_secret_files.py
